--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@ overflow-x:hidden;
 padding:0;
 overflow-y: visible;
 }
+html::-webkit-scrollbar{
+    display:none;
+}
 body{
     background-color:var(--color-creamson);
     max-width:1280px;
